--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,10 +18,11 @@ jobs:
           cp install.sh bin/eun2ce-settings
           chmod +x bin/eun2ce-settings
 
-          # Create tar.gz
+          # Create Unix archive
           tar -czf eun2ce-settings.tar.gz bin/ vscode/
-          # Create zip
-          zip -r eun2ce-settings.zip bin/ vscode/
+
+          # Create Windows archive
+          zip -r eun2ce-settings-windows.zip bin/eun2ce-settings.ps1 vscode/
 
           # Calculate and output SHA256
           SHA256=$(shasum -a 256 eun2ce-settings.tar.gz | cut -d' ' -f1)
@@ -48,14 +49,14 @@ jobs:
           asset_name: eun2ce-settings.tar.gz
           asset_content_type: application/gzip
 
-      - name: Upload zip
+      - name: Upload Windows zip
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./eun2ce-settings.zip
-          asset_name: eun2ce-settings.zip
+          asset_path: ./eun2ce-settings-windows.zip
+          asset_name: eun2ce-settings-windows.zip
           asset_content_type: application/zip
 
       - name: Update Homebrew formula
